--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "octokit": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
