--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "webpack": "^5.95.0",
     "webpack-dev-server": "^5.1.0"
   }
