--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "daily-notes",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/daily-notes-app",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
